Fix YAML syntax and add .nojekyll correctly

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,8 @@ jobs:
       - name: Build static site
         run: npm run build
 
-        - name: Disable Jekyll
+      # ✅ This creates the .nojekyll file inside /out
+      - name: Disable Jekyll
         run: touch ./out/.nojekyll
 
       - name: Upload artifact
