--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.19",
+    "gray-matter": "^4.0.3",
+    "marked": "^16.4.1",
     "next": "^16.0.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
   "devDependencies": {
+    "@types/marked": "^5.0.2",
     "@types/node": "^24.9.2",
     "@types/react": "^19.2.2",
     "autoprefixer": "^10.4.21",
