--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "Institute for Applied Nonsense (IAN) website",
   "main": "index.js",
   "scripts": {
-    "dev": "next dev -p 5173",
+    "dev": "next dev",
     "build": "next build",
-    "start": "npx serve out",
-    "deploy": "npm run build && npm run export"
+    "start": "next start"
   },
   "keywords": [],
   "author": "",
